# CallMeMaybe

./: .gitignore  Makefile  README.md  instructions.txt  main.py  pyproject.toml  test_statemachine.py
data/input/: sum_function.json
data/output/: function_calling_results.json
src/: Makefile  __main__.py  classes.py  cli.py  json_generator.py  models.py  parser.py  statemachine.py
