[project]
name = "callmemaybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.2",
    "pydantic>=2.13.4",
    "torch>=2.8.0",
    "transformers>=4.57.6",
    "llm-sdk",
    "flake8>=7.3.0",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable = true }
